# candidate-ai-portal

./: .gitignore  README.md  main.py  pyproject.toml  rough notes.md
config/: settings.py
db/: mongo_client.py  postgres_client.py
models/: schemas.py
orchestrator/: groq_orchestrator.py
routers/: admin_router.py  analysis_router.py  interview_router.py
scheduler/: market_tool_scheduler.py
security/: jwt_verify.py
tools/: interview_retrieval_tool.py  job_search_tool.py  market_data_tool.py  mock_interview_tool.py  recommendation_tool.py  skill_extraction_tool.py
